[package]
name = "xadrez"
version = "0.1.0"
edition = "2021"
description = "A chess engine written in Rust."
repository = "https://github.com/jovialen/xadrez"
license-file = "LICENSE"
readme = "README.md"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
nnue = { git = "https://github.com/analog-hors/nnue-rs" }
binread = { version = "2", features = ["const_generics"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "evaluate"
harness = false

[[bench]]
name = "search"
harness = false

